<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/photoCard"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/photos"
                android:textSize="20sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>


    <ImageView
        android:id="@+id/demoCameraImg"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/photoCard"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="Total Photos \n 15 "
        android:textAlignment="gravity"
        app:layout_constraintEnd_toEndOf="@id/demoCameraImg"
        app:layout_constraintStart_toStartOf="@id/demoCameraImg"
        app:layout_constraintTop_toBottomOf="@id/demoCameraImg" />

    <TextView
        android:id="@+id/btn_add_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:background="@drawable/text_bg"
        android:clickable="true"
        android:drawablePadding="4dp"
        android:focusable="true"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/add_photo"
        android:textAlignment="gravity"
        android:textColor="@color/white"
        app:drawableStartCompat="@drawable/ic_camera"
        app:layout_constraintBottom_toBottomOf="@+id/demoCameraImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/demoCameraImg" />

    <EditText
        android:id="@+id/search_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="4dp"
        android:hint="@string/type_to_search"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/demoCameraImg" />

    <View
        android:id="@+id/demoLine"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="#EBEBEB"
        app:layout_constraintTop_toBottomOf="@id/search_action" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/photo_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/item_photo_list"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/demoLine" />

    <ProgressBar
        android:id="@+id/progressLoader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/search_action" />

</androidx.constraintlayout.widget.ConstraintLayout>